--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:name=".MainApplication"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
@@ -15,7 +16,7 @@
             android:theme="@style/Theme.ChatAssistant"
             tools:targetApi="31">
         <activity
-                android:name=".MainActivity"
+                android:name=".activities.main.MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:noHistory="true"
