--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/Theme.ChatAssistant"
             tools:targetApi="31">
         <activity
-                android:name=".activities.main.MainActivity"
+                android:name=".activities.MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
                 android:noHistory="true"
