--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,12 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.4.0'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "io.insert-koin:koin-androidx-compose:3.4.3"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.jeziellago:compose-markdown:0.3.2'
+    implementation("io.coil-kt:coil:2.3.0")
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
