--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
@@ -56,11 +55,15 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.4.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "io.insert-koin:koin-androidx-compose:3.4.3"
+    implementation 'com.google.android.play:integrity:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.jeziellago:compose-markdown:0.3.2'
     implementation("io.coil-kt:coil:2.3.0")
+    implementation "io.insert-koin:koin-androidx-compose:3.4.3"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.android.material:material:1.4.+'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
