--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.TTS_SERVICE" />
+        </intent>
+    </queries>
+
     <application
             android:name=".MainApplication"
             android:allowBackup="true"
@@ -18,22 +24,27 @@
         <activity
                 android:name=".activities.MainActivity"
                 android:exported="true"
-                android:label="@string/app_name"
+                android:launchMode="singleTask"
                 android:noHistory="true"
-                android:theme="@style/Theme.ChatAssistant"
-                android:launchMode="singleTask">
+                android:theme="@style/Theme.ChatAssistant">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+                android:name=".activities.SettingsActivity"
+                android:exported="true"
+                android:label="@string/title_activity_settings"
+                android:launchMode="singleTask"
+                android:noHistory="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.TTS_SERVICE" />
-        </intent>
-    </queries>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+    </application>
 
 </manifest>
