--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <activity
                 android:name=".activities.SettingsActivity"
-                android:exported="true"
+                android:exported="false"
                 android:launchMode="singleTask"
                 android:noHistory="true">
 <!--            <intent-filter>-->
