--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "tesler.will.chatassistant"
         minSdk 28
         targetSdk 33
-        versionCode 11
-        versionName "11"
+        versionCode 12
+        versionName "12"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -48,6 +48,8 @@ android {
 }
 
 dependencies {
+    final def compose_ui_version = '1.4.0'
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
@@ -55,15 +57,21 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.4.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation 'com.google.android.play:integrity:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.github.jeziellago:compose-markdown:0.3.2'
-    implementation("io.coil-kt:coil:2.3.0")
     implementation "io.insert-koin:koin-androidx-compose:3.4.3"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'com.google.android.material:material:1.4.+'
+
+    // Used for Markdown support
+    final def markwon_version = '4.6.2'
+    implementation("io.coil-kt:coil:2.3.0")
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
+    implementation "io.noties.markwon:ext-tables:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
+    implementation "io.noties.markwon:linkify:$markwon_version"
+    implementation "com.github.jeziellago:Markwon:58aa5aba6a"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
