--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
                 android:name=".activities.MainActivity"
                 android:exported="true"
                 android:launchMode="singleTask"
-                android:noHistory="true"
-                android:theme="@style/Theme.ChatAssistant">
+                android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
