--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,19 +48,29 @@ android {
 }
 
 dependencies {
-    final def compose_ui_version = '1.4.0'
 
+    // Core Kotlin
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+
+    // Android Compose
+    final def compose_ui_version = '1.4.0'
     implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+
+    // Themed Elements
     implementation 'androidx.compose.material:material:1.4.0'
+
+    // Stored Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Network Client
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Dependency Injection
     implementation "io.insert-koin:koin-androidx-compose:3.4.3"
-    implementation 'androidx.preference:preference:1.2.0'
 
     // Used for Markdown support
     final def markwon_version = '4.6.2'
