--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "tesler.will.chatassistant"
         minSdk 30
         targetSdk 33
-        versionCode 16
-        versionName "16"
+        versionCode 17
+        versionName "17"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -50,17 +50,15 @@ android {
 dependencies {
 
     // Core Kotlin
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     // Android Compose
-    final def compose_ui_version = '1.4.0'
+    final def compose_ui_version = '1.4.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-
-    // Themed Elements
-    implementation 'androidx.compose.material:material:1.4.0'
+    implementation "androidx.compose.material:material:$compose_ui_version"
 
     // Stored Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0"
