--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,23 +25,12 @@
                 android:name=".activities.MainActivity"
                 android:exported="true"
                 android:launchMode="singleTask"
-                android:noHistory="true">
+                android:enableOnBackInvokedCallback="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-                android:name=".activities.SettingsActivity"
-                android:exported="false"
-                android:launchMode="singleTask"
-                android:noHistory="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
     </application>
 
