--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,12 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
+            android:enableOnBackInvokedCallback="true"
             tools:targetApi="33">
         <activity
                 android:name=".activities.MainActivity"
                 android:exported="true"
-                android:launchMode="singleTask"
-                android:enableOnBackInvokedCallback="true">
+                android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
