--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'tesler.will.chatassistant'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "tesler.will.chatassistant"
         minSdk 30
-        targetSdk 33
+        targetSdk 34
         versionCode 29
         versionName "29"
 
@@ -37,9 +37,10 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.0'
+        kotlinCompilerExtensionVersion '1.5.7'
     }
     packagingOptions {
         resources {
@@ -51,12 +52,12 @@ android {
 dependencies {
 
     // Core Kotlin
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     // Android Compose
-    final def compose_ui_version = '1.4.1'
-    implementation 'androidx.activity:activity-compose:1.7.0'
+    final def compose_ui_version = '1.5.4'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:$compose_ui_version"
@@ -64,7 +65,7 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
     // Stored Preferences
     implementation "androidx.datastore:datastore-preferences:1.0.0"
