--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_ui_version"
 
     // Firebase
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Dependency Injection
-    implementation "io.insert-koin:koin-androidx-compose:3.4.3"
+    implementation 'io.insert-koin:koin-androidx-compose:3.5.3'
 
     // Used for Markdown support
     final def markwon_version = '4.6.2'
